--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,8 +14,8 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
-      //"applicationUrl": "http://10.76.76.44:5000",
+      //"applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://10.76.76.44:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
